# MLOps-Prediction-Market

./: .gitignore  .nojekyll  0_broad_univ.ipynb  Dockerfile  README.md  README_v0.html  _quarto.yml  exp_kalshi_api.py  get_market_data_demo.ipynb  idees.txt  index.html  index.qmd  kalshi_api.ipynb  kalshi_api.py  main.py  market_prediction.ipynb  predict_series.py  predict_ticker.py  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  test_api_local.py  toy_mlflow.html  toy_mlflow.ipynb
.github/workflows/: prod.yml  test.yaml  train.yml  website.yaml
BySeries/: backtest.py  backtest_series.py  data.py  data_series.py  demo_series.py  main.py  main_series.py  model.py  model_series.py  pnl_computation.py  requirements.txt  series_ticker.txt
BySeries/outputs/: KXFEDDECISION_model.txt  KXFEDDECISION_report.json  KXGDP_model.txt  KXGDP_report.json  KXPAYROLLS_model.txt  KXPAYROLLS_report.json  KXRATECUTCOUNT_model.txt  (+1 more)
ByTicker/: backtest.py  data.py  logger.py  main.py  model.py
app/: X_example.csv  api.py  run.sh
exp/: README_v0.html  predict_ticker.py  toy_mlflow.html  toy_mlflow.ipynb
market_data/: __init__.py  feature_engineering.py  market_universe.ipynb  markets.py  research_pipeline.py  sports_data_manager.py  utils.py
outputs/: KXGDP-26APR30-T1.5_model.joblib  KXGDP_model.joblib
universe_construction/: 0_broad_univ.ipynb  1_test_research_pipeline.ipynb  2.ipynb  metrics_bt.parquet  pnl_results_bt.parquet  start.ipynb
useless/: exp_kalshi_api.py  get_market_data_demo.ipynb  main.py  market_prediction.ipynb
(+22 files in other folders)
